[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-types"
dynamic = ["version"]
requires-python = ">=3.10"
description = "NetBox type stubs and modules for type checking and development"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "NetBox Community", email = "support@netboxlabs.com" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["netbox", "network", "automation", "ipam", "dcim"]

# Core dependencies from NetBox requirements.txt
dependencies = [
    "colorama==0.4.6",
    "django==5.2.11",
    "django-cors-headers==4.9.0",
    "django-debug-toolbar==6.2.0",
    "django-filter==25.2",
    "django-graphiql-debug-toolbar==0.2.0",
    "django-htmx==1.27.0",
    "django-mptt==0.18.0",
    "django-pglocks==1.0.4",
    "django-prometheus==2.4.1",
    "django-redis==6.0.0",
    "django-rich==2.2.0",
    "django-rq==3.2.2",
    "django-storages==1.14.6",
    "django-tables2==2.8.0",
    "django-taggit==6.1.0",
    "django-timezone-field==7.2.1",
    "djangorestframework==3.16.1",
    "drf-spectacular==0.29.0",
    "drf-spectacular-sidecar==2026.3.1",
    "feedparser==6.0.12",
    "gunicorn==25.1.0",
    "jinja2==3.1.6",
    "jsonschema==4.26.0",
    "markdown==3.10.2",
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.3",
    "mkdocstrings==1.0.3",
    "mkdocstrings-python==2.0.3",
    "netaddr==1.3.0",
    "nh3==0.3.3",
    "pillow==12.1.1",
    "psycopg[c,pool]==3.3.3",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "rq==2.7.0",
    "social-auth-app-django==5.7.0",
    "social-auth-core==4.8.5",
    "sorl-thumbnail==13.0.0",
    "strawberry-graphql==0.307.1",
    "strawberry-graphql-django==0.79.0",
    "svgwrite==1.4.3",
    "tablib==3.9.0",
    "tzdata==2025.3",
]

[project.urls]
Homepage = "https://netboxlabs.com/products/netbox/"
Documentation = "https://netboxlabs.com/docs/netbox/"
Source = "https://github.com/netbox-community/netbox"
Issues = "https://github.com/netbox-community/netbox/issues"

# Configure setuptools to find the netbox package
[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["netbox/netbox"]
include = [
    "account*",
    "circuits*",
    "core*",
    "dcim*",
    "extras*",
    "ipam*",
    "netbox*",
    "tenancy*",
    "users*",
    "utilities*",
    "virtualization*",
    "vpn*",
    "wireless*",
]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools_scm]
# Get version from git tags
root = "."
tag_regex = "^v(?P<version>[0-9.]+)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
